initial search progress

--- a/templates/results_page.html
+++ b/templates/results_page.html
@@ -95,6 +95,12 @@
   <h2>
     Results for ""
   </h2>
+  <div class = "row-cols-auto-5" id = "results">
+    <div id = "result">
+        <img src="../static/assets/img/food1.jpg" class = "result_img">
+        <div>recipe1</div>
+    </div>
+  </div>
 </div>
     
 </div>
