--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -38,9 +38,9 @@
     margin: 0;
     min-height: 100%;
 
-    /* background-color: #FDFAF6; */
+    background-color: #FDFAF6; 
   }
-}*/
+
 
   #footer {
     width: 100vw;
@@ -60,23 +60,7 @@
     color: #64666ee9;
   }
 
-#footer {
-  width: 100vw;
-  background: #fefefe;
-  box-shadow: 0px 0px 25px 0 rgba(0, 0, 0, 0.055);
-  padding: 30px 0;
-  color: #273d2f;
-  font-size: 14px;
-  text-align: center;
-  position:absolute;
-}
-#footer .credits {
-  padding-top: 5px;
-  font-size: 13px;
-}
-#footer .credits a {
-  color: #64666ee9;
-}
+
 
 /*
   MAIN PAGE
@@ -129,9 +113,14 @@
   padding: 0;
   display: flex;
   list-style: none;
+
 }
 
-  }
+.navbar ul li {
+  margin-right:20px;
+}
+
+  
   .navbar a, .navbar a:focus {
     display: flex;
     justify-content: space-between;
@@ -143,6 +132,7 @@
     color:  #064420;
     white-space: nowrap;
     transition: 0.3s;
+    
     position: relative;
   }
   .navbar a i, .navbar a:focus i {
@@ -191,7 +181,8 @@
     padding: 0;
   }
   .navbar .dropdown ul a {
-    padding: 10px 20px;
+    padding: 20px px;
+
     font-size: 15px;
     text-transform: none;
     font-weight: 600;
@@ -281,6 +272,32 @@ select::-webkit-scrollbar {
     border-radius: 0 8px 8px 0;
   }
 
+
+  .viewRecipeTop p1,p3,p7,p9 {
+    font-family: "Trirong", serif;
+    font-weight: 400;
+    font-style: italic;
+    color:#064420;
+
+
+   }
+
+   .prepRecipeSteps pl0 {
+    font-family: "Trirong", serif;
+    font-weight: 400;
+    font-style: italic;
+    color:#064420;
+
+
+   }
+
+   .comment_section pl1 {
+    font-family: "Trirong", serif;
+    font-weight: 400;
+    font-style: italic;
+    color:#064420;
+
+   }
 
   
   .create_recipe label,p {
