--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,13 @@
       </ul>
     </nav><!-- .navbar -->
 
+    <div id="search_bar">
+      <input type = "text" placeholder="Find Recipes">
+      <a href = "results_page.html">
+        <i class = "fa fa-search"></i>
+      </a>
+    </div>
+
     <div class="header-social-links">
       <!--<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
       <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
