made changes to each html file, connected to favourites/author

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Recipe Reboot</title>
+    <title>Recipe Reboot Home </title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -45,10 +45,9 @@
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul class="menu" >
         <li><a class="active" href="index.html">Home</a></li>
-
+        
         <li><a href="create_recipe.html" >Create Recipe</a></li>
-        <li><a href="" onclick="">Favourites</a></li>
-        <li><a href="" >About</a></li>
+        </a></li>
 
       </ul>
     </nav><!-- .navbar -->
@@ -60,10 +59,9 @@
       </a>
     </div>
 
-    <div class="header-social-links">
-      <!--<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a> -->
+    <div class="header-favourites">
+      <a  href="#"  onclick=""><i style="color:#064420; font-size: 20px;" class="bi bi-star"></i></a>
+      
       
     </div>
 
