--- a/templates/recipes_page.html
+++ b/templates/recipes_page.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Recipe Reboot</title>
+    <title>Recipe Reboot Details</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -44,11 +44,10 @@
 
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul class="menu" >
-        <li><a class="active" href="index.html">Home</a></li>
-
+        <li><a href="index.html">Home</a></li>
+        
         <li><a href="create_recipe.html" >Create Recipe</a></li>
-        <li><a href="" onclick="">Favourites</a></li>
-        <li><a href="" >About</a></li>
+        </a></li>
 
       </ul>
     </nav><!-- .navbar -->
@@ -58,6 +57,12 @@
       <a href = "results_page.html">
         <i class = "fa fa-search"></i>
       </a>
+    </div>
+
+    <div class="header-favourites">
+      <a  href="#"  onclick=""><i style="color:#064420; font-size: 20px;" class="bi bi-star"></i></a>
+      
+      
     </div>
 
   </div>
@@ -117,7 +122,7 @@
 </div>
 <br>
 <div style="margin-left:25%;  float:right; margin-right:25%;" id ="author_link">
-  <a href="authors_page.html">Posted by </a>  <!-- add authors name through -->
+  <a href="#"  onclick="" >Posted by </a>  <!-- add authors name through -->
 </div>
 <br>
 </div>
