--- a/templates/index.html
+++ b/templates/index.html
@@ -78,62 +78,8 @@
       POPULAR RECIPES
     </h1>
 
-    <div id="container-fluid recipe_super_div">
-      <div class = "row align-items-start" id = "selectors">
-        <div class = "col" id = "recipe1" >
-          <div id = "recipe_image">
-            <img class = "img-fluid" id = "recipe_image" src = "../static/assets/img/food2.jpg">
-            </img>
-            <div class = "row align-items-center" id = "likes">
-              <a class="like_button" id = "like_button_1" href="http://127.0.0.1:5000/heart" data-gallery="portfolioGallery" class="col feed-lightbox">
-                <span id = heart4>
-                  <i class="fa  fa-heart-o fa-3x" aria-hidden="true" >
-                  </i> 
-                </span>
-              </a>
-              <div class="like-counter" id = "num_likes_1">
-              </div>
-            </div>
-          </div> 
-          <h class = "recipe_name" id = "recipe_title_1">
-          </h>
-        </div>
-        <div class = "col" id = "recipe2" >
-          <div id = "recipe_image">
-            <img class = "img-fluid" id = "recipe_image" src = "../static/assets/img/food2.jpg">
-            </img>
-            <div class = "row align-items-center" id = "likes">
-              <a class="like_button" id="like_button_2" href="http://127.0.0.1:5000/heart" data-gallery="portfolioGallery" class="col feed-lightbox">
-                <span id = heart4>
-                  <i class="fa  fa-heart-o fa-3x" aria-hidden="true"></i> 
-                </span>
-              </a>
-              <div class="like-counter" id = "num_likes_2">
-              </div>
-            </div>
-          </div> 
-          <h class = "recipe_name" id = "recipe_title_2">
-          </h>
-        </div>
-        <div class = "col" id = "recipe1">
-          <div id = "recipe_image">
-            <img class = "img-fluid" id = "recipe_image" src = "../static/assets/img/food2.jpg">
-            </img>
-            <div class = "row align-items-center" id = "likes">
-              <a class="like_button" id="like_button_3" href="http://127.0.0.1:5000/heart" data-gallery="portfolioGallery" class="col feed-lightbox">
-                <span id = heart4>
-                  <i class="fa  fa-heart-o fa-3x" aria-hidden="true" >
-                  </i> 
-                </span>
-              </a>
-              <div class="like-counter" id = "num_likes_3">
-              </div>
-            </div>
-          </div> 
-          <h class = "recipe_name" id = "recipe_title_3">
-          </h>
-        </div>
-      </div> 
+    <div id="recipe_super_div">
+      
     </div>
   </div>
 
@@ -163,6 +109,10 @@
   <h2>
     Other Recipes
   </h2>
+
+  <div id = "other_recipes">
+
+  </div>
 </div>
     
 
@@ -197,86 +147,8 @@
   <script src="../static/assets/vendor/php-email-form/validate.js"></script>
 
   <!--  Main JS File -->
-  <script type="module">
-    import database from "../static/assets/js/res/database_parsing/queries.js"
-
-    // Generates a food 
-    function generate_food_div(index) {
-      return `<div class = 'col food_div' id = 'recipe1' >
-        <div id = 'recipe_image'>
-          <img class = 'img-fluid food_image' id = 'recipe_image' src = '../static/assets/img/food2.jpg'>
-          </img>
-          <div class = 'row align-items-center' id = 'likes'>
-            <a class='like_button' id = 'like_button_` + index + `' data-gallery='portfolioGallery' class='col feed-lightbox'>
-              <span id = 'heart4'>
-                <i class='fa  fa-heart-o fa-3x' id='heart_` + index + `'' aria-hidden='true' >
-                </i> 
-              </span>
-            </a>
-            <div class='like-counter' id = 'num_likes_` + index + `'>
-            </div>
-          </div>
-        </div> 
-        <h class='recipe_name' id = 'recipe_title_` + index + `'>
-        </h>
-      </div>`
-    }
-
-    function load_recipe(recipes) {
-      let food_div = $("#recipe_super_div");
-      let total_text = "";
-
-      //Adds the row organizer
-      total_text += "<div class = 'row align-items-start food_row_maker' id = 'selectors'>"
-      for (let i = 0; i < recipes.length; i++) {
-        total_text += generate_food_div((i + 1));
-      }
-      total_text += "</div>"
-      food_div.html(total_text);
-
-      // Adds the recipes
-      for (let i = 0; i < recipes.length; i++) {
-        const index = i + 1;
-        const recipe_title = "recipe_title_" + index
-        $('#' + recipe_title).html(recipes[i].name)
-
-        const recipe_likes = "num_likes_" + index
-        $('#' + recipe_likes).html(recipes[i].likes)
-
-        const like_button = "heart_" + index;
-        $('#' + like_button).click(
-          function() {
-            let the_index = index; 
-            if ($('#' + like_button).hasClass("liked")) {
-              $('#' + like_button).removeClass("liked")
-            } else {
-              $('#' + like_button).addClass("liked")
-            };
-            database.like_recipe(recipes[i].name);
-
-            let recipe_likes = "num_likes_" + the_index
-            $('#' + recipe_likes).html(recipes[i].likes)
-          }
-        )
-      }
-    }
-
-    export function load_all_recipes() {
-      // Gets all the recipes
-      load_recipe(database.get_all_recipes());
-
-    }
-
-    $('#search_value').change(
-      function() {
-        const content = $('#search_value').val()
-        console.log("Content: " + content)
-        let all_recipes = database.get_all_recipes();
-        let recipes = database.filter_name(all_recipes, content)
-        load_recipe(recipes)
-      }
-    )
-    window.onload = load_all_recipes();
+  <script type="module" src = "../static/assets/js/main.js">
+    
   </script>
 </body>
 
