changes to style and html files

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -210,7 +210,7 @@
   height: 1px;
   bottom: -5px;
   left: 0;
-  background-color: #E4EFE7;
+  background-color: #064420;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
