changes to nav bar

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,21 +53,22 @@
 
     </nav><!-- .navbar -->
 
+    <div id="search_bar">
+      <input id="search_value" type = "text" placeholder="Find Recipes">
+      <a href = "#">
+        <i class = "fa fa-search"></i>
+      </a>
+    </div>
 
 
     <div class="header-favourites">
       <a  href="#"  onclick=""><i style="color:#064420; font-size: 20px;" class="bi bi-star"></i></a>
       
-      
-
-      <input type = "text" id="search_value" placeholder="Find Recipes">
-      <i class = "fa fa-search"></i>
 
     </div>
 
 
-    <div>
-    </div>
+    
   </div>
 
 </header><!-- End Header -->
