--- a/templates/recipes_page.html
+++ b/templates/recipes_page.html
@@ -52,16 +52,18 @@
       </ul>
     </nav><!-- .navbar -->
 
+
     <div id="search_bar">
-      <input type = "text" placeholder="Find Recipes">
-      <a href = "results_page.html">
+      <input id="search_value" type = "text" placeholder="Find Recipes">
+      <a href = "#">
         <i class = "fa fa-search"></i>
       </a>
     </div>
+    
 
     <div class="header-favourites">
       <a  href="#"  onclick=""><i style="color:#064420; font-size: 20px;" class="bi bi-star"></i></a>
-      
+       
       
     </div>
 
