--- a/templates/create_recipe.html
+++ b/templates/create_recipe.html
@@ -32,7 +32,7 @@
     <link href="../static/assets/css/style.css" rel="stylesheet">
   </head>
   
-  <body style="background-image: url('background.jpg');" >
+  <body id="body" >
 
 <!-- ======= Header ======= -->
 <header id="header" class="fixed-top">
@@ -53,8 +53,8 @@
     </nav><!-- .navbar -->
 
     <div id="search_bar">
-      <input type = "text" placeholder="Find Recipes">
-      <a href = "results_page.html">
+      <input  id="search_value" type = "text" placeholder="Find Recipes">
+      <a href = "#">
         <i class = "fa fa-search"></i>
       </a>
     </div>
