--- a/templates/create_recipe.html
+++ b/templates/create_recipe.html
@@ -52,7 +52,7 @@
       </ul>
     </nav><!-- .navbar -->
 
-    <div id="search_bar">
+    <div id="search_value">
       <input type = "text" placeholder="Find Recipes">
       <a href = "results_page.html">
         <i class = "fa fa-search"></i>
@@ -97,8 +97,6 @@
         <form class="needs-validation" novalidate>
           <div class="mb-3">
             <label for="">Please enter the name of your dish. <span class="text-muted"></span></label>
-            <input style=" margin-left: 12%; width:fit-content;" type="" class="form-control" id="" placeholder="">
-
             <input id="submit_name" style=" margin-left: 12%; width:fit-content;" type="" class="form-control" placeholder="">
             <div class="invalid-feedback">
               Please enter a valid pharmacy number.
@@ -247,7 +245,7 @@
   <script src="../static/assets/vendor/php-email-form/validate.js"></script>
 
   <!--  Main JS File -->
-  <script src="../static/assets/js/main.js"></script>
+  <script type = "module" src="../static/assets/js/main.js"></script>
 
 
 </body>
