change to search

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
 
   <!-- top three recipes -->
   <div class = "container-sm text-center" style = "margin-top: 0px">
-    <h1>
+    <h1 id = "title_div">
       POPULAR RECIPES
     </h1>
 
