add comment section

--- a/templates/recipes_page.html
+++ b/templates/recipes_page.html
@@ -72,7 +72,7 @@
 </header><!-- End Header -->
 
 <!-- === Feed === -->
-<div id="feed">
+<div style="margin-bottom:3%;" id="feed">
 <div style="height:100%" id="viewRecipeTop">
 
 
@@ -114,17 +114,30 @@
 
 </div>
 <br>
+<div style="margin-left:25%;  float:right; margin-right:25%;" id ="author_link">
+  <a href="#"  onclick="" >Posted by </a>  <!-- add authors name through -->
+</div>
+<br>
 
-<div style="margin-left: 25%;" id="comment_section">
+<div  id="comment_section">
 
-  <p12 id="preparationHead">COMMENTS</p12>
+  <p12 style="font-family: Trirong, serif;
+  font-weight: 400;
+  font-style: italic;
+  color:#064420; margin-left:25%; "   id="commentL">Leave a Comment</p12>
+
+    <div class="comment-box">
+    
+      <form class="comment-form">
+        <input type="text" placeholder="Name">
+        <textarea rows="4" placeholder="Write Your Comment"></textarea>
+      </form>
+      <button  style="margin-right:20%; float:right; padding-bottom:10px;" type="submit">Post Your Comment</button>
+    
+    </div>
   
  
 
-</div>
-<br>
-<div style="margin-left:25%;  float:right; margin-right:25%;" id ="author_link">
-  <a href="#"  onclick="" >Posted by </a>  <!-- add authors name through -->
 </div>
 <br>
 </div>
